--- a/index.html
+++ b/index.html
@@ -3,9 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LadSoft - Liga Acadêmica de Desenvolvimento de Software - Uninassau</title>
+    <title>LadSoft</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Hello World</h1>
+
+    <header>
+        <img src="img/20200427_144302_0000.png" alt="LadSoft - Liga Acadêmica de Desenvolvimento de Software">
+    </header>
+
+    <section id="home">
+        <h1>
+            <img src="img/20200427_144302_0000.png" alt="Logo da LadSoft - Liga Acadêmica de Desenvolvimento de Software">
+        </h1>
+
+        <img src="img/cover.png" alt="" class="cover">
+
+        <p>Somos a Liga Acadêmica de Desenvolvimento de Software da Uninassau. Formada por estudantes e professores, surgimos com a missão de propagar conhecimentos, buscar soluções tecnológicas, produzir pesquisas científicas e funcionar como um laboratório para a prática do desenvolvimento de softwares sob demanda</p>
+    </section>
+
+    <section id="atuacao">
+        <h2>ATUAÇÃO</h2>
+        <div class="act">
+            <h3>ALÉM DO CÓDIGO</h3>
+
+            <img src="img/undraw_pair_programming_njlp.png" alt="" class="pair">
+
+            <p>Acreditamos que a educação é o caminho para o desenvolvimento do indivíduo e uma ótima forma de aproximar pessoas. Temos como uma de nossas missões promover o ensino da programação de softwares para todos que tenham o interesse em desenvolver um novo conhecimento ou ajudar estudantes que estejam com dificuldades.</p>
+
+            <button>SAIBA MAIS</button>
+        </div>
+
+        <div class="act">
+            <h3>PRODUZIMOS CONHECIMENTO</h3>
+
+            <img src="img/undraw_version_control_9bpv.png" alt="" class="version">
+
+            <p>O conhecimento técnico e científico é muito importante para a carreira do desenvolvedor de softwares. Devemos buscar, produzir e repassar estes conhecimentos. Para isso a LadSoft planeja eventos acadêmicos como seminários e palestras para que alunos, professores e membros da LadSoft possam mostrar à nossa comunidade o seu trabalho.</p>
+
+            <button>SAIBA MAIS</button>
+        </div>
+
+        <div class="act">
+            <h3>ESTAMOS CONECTADOS</h3>
+
+            <img src="img/undraw_destinations_fpv7.png" alt="" class="destination">
+
+            <p>Vivemos em comunidades e juntos somos mais fortes. Buscamos sempre interagir com grupos de outras instituições para trocas de experiências e parcerias. Nossos membros participam de congressos em outras instituições para divulgar as ações da LadSoft e implementar na Uninassau boas ações que estão sendo feitas lá fora.</p>
+
+            <button>SAIBA MAIS</button>
+        </div>
+
+        <div class="act">
+            <h3>FABRICAMOS SOFTWARE</h3>
+
+            <img src="img/undraw_in_progress_ql66.png" alt="" class="progress">
+
+            <p>Colocamos em prática tudo o que aprendemos ao seu dispor. É assim que podemos retribuir por tudo que aprendemos. Na LadSoft desenvolvemos softwares para solucionar necessidades de outros departamentos da Uninassau e de clientes sem fins lucrativos. Os nossos membros também promovem academias e aulas práticas para outros alunos exercitarem a programação de softwares.</p>
+
+            <button>SAIBA MAIS</button>
+        </div>
+    </section>
+
+    <section id="membros">
+        <h2>MEMBROS</h2>
+
+        <h3>SOMOS UM TIME</h3>
+
+        <img src="img/undraw_meet_the_team_e5b7.png" alt="" class="meet">
+
+        <p>A LadSoft é formada por pessoas. Mais do que em códigos nossa força está em nossa equipe. O requisito primordial para fazer parte da LadSoft é ser engajado, querer um mundo novo e ter vontade de ser protagonista dessa mudança.</p>
+
+        <p>Periodicamente abrimos vagas para o ingresso de novos membros efetivos de nossa Liga.</p>
+
+        <button>JUNTE-SE A NÓS</button>
+
+        <div class="red">
+            <h2 class="white">NOSSOS MEMBROS</h2>
+
+            <p class="white">Conheça quem torna a LadSoft uma realidade!</p>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Prof. Msc. Armanda Maria</h4>
+
+                    <img src="img/armanda.png" alt="" class="photo">
+
+                    <p class="card">Sou Armanda, mãe, professora e entusiasta da área de TI. Formada em Ciência da Computação com Mestrado na área de Engenharia de software. Fã de quadrinhos e apaixonada por animais!</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-linkedin-in"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+
+    
+    <script src="js/app.js"></script>
 </body>
 </html>
