--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>LadSoft</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -110,7 +111,7 @@
                     </li>
                     <li>
                         <a href="#">
-                            <i class="fa fa-linkedin-in"></i>
+                            <i class="social fa fa-linkedin"></i>
                         </a>
                     </li>
                     <li>
