--- a/index.html
+++ b/index.html
@@ -131,6 +131,53 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Breno Marques</h4>
+
+                    <img src="img/breno.png" alt="" class="photo">
+
+                    <p class="card">Meu nome é Breno! Sou entusiasta da área de Ciência de Dados e apaixonado por programação (pelo menos quando compila). Proatividade e bom humor são minha marca registrada! Prazer!</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
