--- a/index.html
+++ b/index.html
@@ -178,6 +178,241 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Júlia Iolanda</h4>
+
+                    <img src="img/julia.png" alt="" class="photo">
+
+                    <p class="card">Técnica em manutenção e suporte em informática. Acadêmica em Ciência da computação. Amante da tecnologia, apaixonada por livros e pela docência. Prazer, Júlia!</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Oscar Maia</h4>
+
+                    <img src="img/oscar.png" alt="" class="photo">
+
+                    <p class="card">Olá, me chamo Oscar! Sempre que posso estou programando, gosto de criar coisas úteis e usar a cabeça pra resolver problemas. Prazer.</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Paulo Lima</h4>
+
+                    <img src="img/eu.jpeg" alt="" class="photo">
+
+                    <p class="card">Oi, eu sou o Paulo. Gosto muito de programar e ensinar outras pessoas como programar. Estou aqui para tirar dúvidas, desenvolver soluções e movimentar o corpo estudantil dessa faculdade para produzirmos juntos os melhores eventos acadêmicos possíveis!</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Pedro Crispim</h4>
+
+                    <img src="img/pedro.png" alt="" class="photo">
+
+                    <p class="card">Sou Pedro, amante de hardware, infraestrutura e redes. Curso Ciência da Computação e também sou técnico em manutenção de micros e redes. Nos horários livres eu maratono animes, estudo música e repito para todo mundo que “Link” não é “Zelda”.</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="pessoa">
+                <div class="card">
+                    <h4>Vinícius Barros</h4>
+
+                    <img src="img/vinicius.png" alt="" class="photo">
+
+                    <p class="card">Olá sou Vinicius, conhecido pela criatividade e alto-astral! Analista/Consultor de sistemas, apaixonado pela inovação, Design e Gestão de Projetos, sempre em busca de novas estratégias para explorar o máximo dessa arte que é a tecnologia!</p>
+                </div>
+                <ul class="social">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+                    </li>    
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="social fa fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-envelope"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
 
