--- a/index.html
+++ b/index.html
@@ -416,6 +416,34 @@
         </div>
     </section>
 
+    <section id="contato">
+
+        <img src="img/undraw_contact_us_15o2.png" alt="" class="contato">
+
+        <p class="assinatura">
+            <a href="#">
+                <i class="fa fa-instagram"> ladsoftuninassau</i>
+            </a>
+        </p>
+
+        <p class="assinatura">
+            <a href="#">
+                <i class="fa fa-github"> ladsoft-nassau</i>
+            </a>
+        </p>
+
+        <p class="assinatura">
+            <a href="#">
+                <i class="fa fa-envelope"> ladsoftuninassau@gmail.com</i>
+            </a>
+        </p>
+
+        <img src="img/20200427_144302_0000.png" alt="" class="assinatura">
+        <small>2020. Junte-se a nós!</small>
+
+        <div class="black">
+        </div>
+    </section>
 
     
     <script src="js/app.js"></script>
