--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 
     <header>
         <img src="img/20200427_144302_0000.png" alt="LadSoft - Liga Acadêmica de Desenvolvimento de Software">
+
+        <nav class="nav-collapse">
+            <ul>
+                <li class="menu-item active"><a href="#home">QUEM SOMOS</a></li>
+                <li class="menu-item"><a href="#atuacao">ATUAÇÃO</a></li>
+                <li class="menu-item"><a href="#membros">MEMBROS</a></li>
+                <li class="menu-item"><a href="#contato">CONTATO</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section id="home">
@@ -445,7 +454,10 @@
         </div>
     </section>
 
-    
+    <script src="js/responsive-nav.js"></script>
+    <script src="js/fastclick.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/fixed-responsive-nav.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
