--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <nav class="nav-collapse">
             <ul>
-                <li class="menu-item active"><a href="#home">QUEM SOMOS</a></li>
+                <li class="menu-item active"><a href="#home">INÍCIO</a></li>
                 <li class="menu-item"><a href="#atuacao">ATUAÇÃO</a></li>
                 <li class="menu-item"><a href="#membros">MEMBROS</a></li>
                 <li class="menu-item"><a href="#contato">CONTATO</a></li>
