--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <section id="atuacao">
         <h2>ATUAÇÃO</h2>
+        
         <div class="act">
             <h3>ALÉM DO CÓDIGO</h3>
 
@@ -42,7 +43,15 @@
 
             <p>Acreditamos que a educação é o caminho para o desenvolvimento do indivíduo e uma ótima forma de aproximar pessoas. Temos como uma de nossas missões promover o ensino da programação de softwares para todos que tenham o interesse em desenvolver um novo conhecimento ou ajudar estudantes que estejam com dificuldades.</p>
 
-            <button>SAIBA MAIS</button>
+            <button id="alem">SAIBA MAIS</button>
+
+            <div id="id01" class="w3-modal">
+                <div class="w3-modal-content">
+                    <div class="w3-container">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum at repellat sunt officiis deleniti assumenda esse voluptates voluptas. Molestiae harum amet eos deserunt, reiciendis tenetur. Expedita molestias modi dolor placeat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consequuntur numquam deserunt nobis unde voluptatibus iste earum officiis cupiditate facilis porro omnis laboriosam, reprehenderit, soluta, fugiat magnam ducimus quidem minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum repellat totam autem beatae, vero nobis eveniet soluta ducimus nam maiores debitis architecto hic delectus vitae accusamus incidunt ipsam perferendis! Veritatis.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="act">
@@ -52,7 +61,15 @@
 
             <p>O conhecimento técnico e científico é muito importante para a carreira do desenvolvedor de softwares. Devemos buscar, produzir e repassar estes conhecimentos. Para isso a LadSoft planeja eventos acadêmicos como seminários e palestras para que alunos, professores e membros da LadSoft possam mostrar à nossa comunidade o seu trabalho.</p>
 
-            <button>SAIBA MAIS</button>
+            <button id="conhecimento">SAIBA MAIS</button>
+
+            <div id="id02" class="w3-modal">
+                <div class="w3-modal-content">
+                    <div class="w3-container">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum at repellat sunt officiis deleniti assumenda esse voluptates voluptas. Molestiae harum amet eos deserunt, reiciendis tenetur. Expedita molestias modi dolor placeat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consequuntur numquam deserunt nobis unde voluptatibus iste earum officiis cupiditate facilis porro omnis laboriosam, reprehenderit, soluta, fugiat magnam ducimus quidem minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum repellat totam autem beatae, vero nobis eveniet soluta ducimus nam maiores debitis architecto hic delectus vitae accusamus incidunt ipsam perferendis! Veritatis.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="act">
@@ -62,7 +79,15 @@
 
             <p>Vivemos em comunidades e juntos somos mais fortes. Buscamos sempre interagir com grupos de outras instituições para trocas de experiências e parcerias. Nossos membros participam de congressos em outras instituições para divulgar as ações da LadSoft e implementar na Uninassau boas ações que estão sendo feitas lá fora.</p>
 
-            <button>SAIBA MAIS</button>
+            <button id="conectados">SAIBA MAIS</button>
+
+            <div id="id03" class="w3-modal">
+                <div class="w3-modal-content">
+                    <div class="w3-container">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum at repellat sunt officiis deleniti assumenda esse voluptates voluptas. Molestiae harum amet eos deserunt, reiciendis tenetur. Expedita molestias modi dolor placeat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consequuntur numquam deserunt nobis unde voluptatibus iste earum officiis cupiditate facilis porro omnis laboriosam, reprehenderit, soluta, fugiat magnam ducimus quidem minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum repellat totam autem beatae, vero nobis eveniet soluta ducimus nam maiores debitis architecto hic delectus vitae accusamus incidunt ipsam perferendis! Veritatis.</p>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="act">
@@ -72,7 +97,15 @@
 
             <p>Colocamos em prática tudo o que aprendemos ao seu dispor. É assim que podemos retribuir por tudo que aprendemos. Na LadSoft desenvolvemos softwares para solucionar necessidades de outros departamentos da Uninassau e de clientes sem fins lucrativos. Os nossos membros também promovem academias e aulas práticas para outros alunos exercitarem a programação de softwares.</p>
 
-            <button>SAIBA MAIS</button>
+            <button id="fabricamos">SAIBA MAIS</button>
+
+            <div id="id04" class="w3-modal">
+                <div class="w3-modal-content">
+                    <div class="w3-container">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum at repellat sunt officiis deleniti assumenda esse voluptates voluptas. Molestiae harum amet eos deserunt, reiciendis tenetur. Expedita molestias modi dolor placeat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consequuntur numquam deserunt nobis unde voluptatibus iste earum officiis cupiditate facilis porro omnis laboriosam, reprehenderit, soluta, fugiat magnam ducimus quidem minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum repellat totam autem beatae, vero nobis eveniet soluta ducimus nam maiores debitis architecto hic delectus vitae accusamus incidunt ipsam perferendis! Veritatis.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -87,7 +120,15 @@
 
         <p>Periodicamente abrimos vagas para o ingresso de novos membros efetivos de nossa Liga.</p>
 
-        <button>JUNTE-SE A NÓS</button>
+        <button id="junteSe">JUNTE-SE A NÓS</button>
+
+        <div id="id05" class="w3-modal">
+            <div class="w3-modal-content">
+                <div class="w3-container">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum at repellat sunt officiis deleniti assumenda esse voluptates voluptas. Molestiae harum amet eos deserunt, reiciendis tenetur. Expedita molestias modi dolor placeat. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsa consequuntur numquam deserunt nobis unde voluptatibus iste earum officiis cupiditate facilis porro omnis laboriosam, reprehenderit, soluta, fugiat magnam ducimus quidem minima! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum repellat totam autem beatae, vero nobis eveniet soluta ducimus nam maiores debitis architecto hic delectus vitae accusamus incidunt ipsam perferendis! Veritatis.</p>
+                </div>
+            </div>
+        </div>
 
         <div class="red">
             <h2 class="white">NOSSOS MEMBROS</h2>
@@ -292,37 +333,37 @@
                 </div>
                 <ul class="social">
                     <li>
-                        <a href="#">
+                        <a href="https://twitter.com/prmlimajr">
                             <i class="fa fa-twitter"></i>
                         </a>
                     </li>    
                     <li>
-                        <a href="#">
+                        <a href="https://www.facebook.com/paulo.lima.9279">
                             <i class="social fa fa-facebook"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.instagram.com/prmlimajr/">
                             <i class="fa fa-instagram"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://www.linkedin.com/in/prmlimajr/">
                             <i class="social fa fa-linkedin"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://github.com/prmlimajr">
                             <i class="fa fa-github"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="https://wa.me/5581999813319?text=Oi,%20Paulo!">
                             <i class="fa fa-whatsapp"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="mailto:prmlimajr@hotmail.com">
                             <i class="fa fa-envelope"></i>
                         </a>
                     </li>
@@ -430,20 +471,23 @@
         <img src="img/undraw_contact_us_15o2.png" alt="" class="contato">
 
         <p class="assinatura">
-            <a href="#">
-                <i class="fa fa-instagram"> ladsoftuninassau</i>
+            <i class="fa fa-instagram"> </i>
+            <a href="https://www.instagram.com/ladsoftuninassau/">
+                ladsoftuninassau
             </a>
         </p>
 
         <p class="assinatura">
-            <a href="#">
-                <i class="fa fa-github"> ladsoft-nassau</i>
+            <i class="fa fa-github"></i>
+            <a href="https://github.com/ladsoft-nassau">
+                ladsoft-nassau
             </a>
         </p>
 
         <p class="assinatura">
-            <a href="#">
-                <i class="fa fa-envelope"> ladsoftuninassau@gmail.com</i>
+            <i class="fa fa-envelope"></i>
+            <a href="mailto:ladsoftuninassau@gmail.com">
+                ladsoftuninassau@gmail.com
             </a>
         </p>
 
