add um paragrafo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-
+	<p> Olá. Revisei os conteudos do material e aprendi muita coisa. </p>
     <header>
         <img src="img/20200427_144302_0000.png" alt="LadSoft - Liga Acadêmica de Desenvolvimento de Software">
 
